<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/iv_log_inst"
        android:layout_width="219dp"
        android:layout_height="150dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inastagram" />

    <EditText
        android:id="@+id/et_log_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_log_inst" />

    <EditText
        android:id="@+id/ed_password_log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_log_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_log_email"
        app:layout_constraintTop_toBottomOf="@+id/et_log_email" />

    <EditText
        android:id="@+id/ed_Email_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:padding="3dp"
        android:textSize="24sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ed_password_log"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_password_log"
        app:layout_constraintTop_toBottomOf="@+id/ed_password_log" />

    <EditText
        android:id="@+id/ed_password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:hint="@string/password"
        android:padding="3dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_Email_reg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ed_Email_reg"
        app:layout_constraintTop_toBottomOf="@+id/ed_Email_reg" />

    <Button
        android:id="@+id/bt_register_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/backgroung_bt"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_log_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_log_email" />


</androidx.constraintlayout.widget.ConstraintLayout>