<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Comment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Editeprofile_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/comment"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Editeprofile_close"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/Editeprofile_close"
                    android:layout_width="37dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_back" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_comment"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/inastagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_comment_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/edittextcomm"
        android:hint="@string/add_comment"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_add_comment"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/iv_user_comment"
        app:layout_constraintTop_toTopOf="@+id/iv_user_comment" />

            <Button
                android:id="@+id/bt_add_comment"
                android:layout_width="75dp"
                android:layout_height="37dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittextcomm"
                android:padding="-5dp"
                android:text="@string/add"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/ed_comment_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ed_comment_comment" />



</androidx.constraintlayout.widget.ConstraintLayout>